# internal/api/v1/testcases.go
@@ -394,3 +394,63 @@ func ListClosedTestCases(testCasesService services.TestCaseService, logger loggi
 		return c.JSON(schema.TestCaseListResponse{TestCases: testCases})
 	}
 }
+
+// ListFailingTestCases godoc
+//
+//	@ID				ListFailingTestCases
+//	@Summary		List Failing Test Cases
+//	@Description	List Failing Test Cases
+//	@Tags			test-cases
+//	@Accept			json
+//	@Produce		json
+//	@Param			projectID	path		string	true	"Project ID"
+//	@Success		200			{object}	schema.TestCaseListResponse
+//	@Failure		400			{object}	problemdetail.ProblemDetail
+//	@Failure		500			{object}	problemdetail.ProblemDetail
+//	@Router			/v1/projects/{projectID}/test-cases/failing [get]
+func ListFailingTestCases(testCasesService services.TestCaseService, logger logging.Logger) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		projectID, err := c.ParamsInt("projectID")
+		if err != nil || projectID == 0 {
+			return problemdetail.BadRequest(c, "missing projectID")
+		}
+
+		testCases, err := testCasesService.FindAllFailing(c.Context(), int64(projectID))
+		if err != nil {
+			logger.Error(loggedmodule.ApiTestCases, "failed to fetch feailing test cases")
+			return problemdetail.ServerErrorProblem(c, "failed to fetch failing test cases")
+		}
+
+		return c.JSON(schema.TestCaseListResponse{TestCases: testCases})
+	}
+}
+
+// ListScheduledTestCases godoc
+//
+// @ID          ListScheduledTestCases
+// @Summary     List Scheduled Test Cases
+// @Description List all test cases scheduled for execution
+// @Tags        test-cases
+// @Accept      json
+// @Produce     json
+// @Param       projectID path string true "Project ID"
+// @Success     200 {object} schema.TestCaseListResponse
+// @Failure     400 {object} problemdetail.ProblemDetail
+// @Failure     500 {object} problemdetail.ProblemDetail
+// @Router      /v1/projects/{projectID}/test-cases/scheduled [get]
+func ListScheduledTestCases(testCasesService services.TestCaseService, logger logging.Logger) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		projectID, err := c.ParamsInt("projectID")
+		if err != nil || projectID == 0 {
+			return problemdetail.BadRequest(c, "missing projectID")
+		}
+
+		testCases, err := testCasesService.FindAllScheduled(c.Context(), int64(projectID))
+		if err != nil {
+			logger.Error(loggedmodule.ApiTestCases, "failed to fetch scheduled test cases", "error", err)
+			return problemdetail.ServerErrorProblem(c, "failed to fetch scheduled test cases")
+		}
+
+		return c.JSON(schema.TestCaseListResponse{TestCases: testCases})
+	}
+}
